# Koaloader

./: CMakeLists.txt  sync.json
.github/workflows/: ci.yml
res/: Koaloader.config.json  Koaloader.schema.json
src/koaloader/: koaloader.cpp  koaloader.hpp
src/patcher/: patcher.cpp  patcher.hpp
src/win_api/: file_api.cpp  file_api.hpp
test/: CMakeLists.txt  list_directory_test.cpp  list_modules_test.cpp
tools/src/: list_common_exports.cpp
